Prevent title buttons from wrapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,7 +112,7 @@ h3 {
 .title-buttons {
   display: inline-block;
   vertical-align: top;
-  min-width: 270px;
+  min-width: 300px;
 }
 
 #search button {
